spacing at right fix

--- a/assets/css/homepage.styl
+++ b/assets/css/homepage.styl
@@ -14,7 +14,7 @@ $height-of-header = (90/16)em
 html, body
     background-image url('/images/fabric_plaid.png')
     width 100%
-    padding 0px
+    padding 0px 0px 0px 0px
 
 .header-row
     background-color gray
@@ -32,6 +32,9 @@ html, body
     height $height-of-header
     font-family webfontbold
     margin auto
+
+.header-link-wrapper
+    margin-left 50% !important
 
 .header-link
     text-decoration none !important
@@ -66,6 +69,8 @@ html, body
 
 /*765px*/
 @media screen and (min-width: 0em) and (max-width: 47.9375em)
+    .header-link-wrapper
+        margin-left 0% !important
     #my-logo
         position relative
         margin auto
